--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 #nSACwcQ67aZxw2JK
 DATABASE_URL="postgres://postgres.tlvxxeshleyfnnpexbea:nSACwcQ67aZxw2JK@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
-NEXTAUTH_URL="http://localhost/espace-personnel/api/auth"
+NEXTAUTH_URL="http://localhost:3000/api/auth"
 NEXTAUTH_SECRET="kE7Ell4oXGGqoVCIQo8kHN1ShTlmdAzcb63ODhdCrcA="
