--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^14.1.0",
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
